# onnx-extended

./: .clang-format  .gitignore  CHANGELOGS.rst  CMakeList.txt  CMakeLists.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  azure-pipelines.yml  clang_format.sh  clean_build.sh  clean_onnx.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  check-release.yml  check-urls.yml  cmakelint.yml  documentation.yml  mypy.yml  rstcheck.yml  wheels-linux.yml  wheels-mac.yml  wheels-windows.yml  wheels.yml
_cmake/: CMakeLists.txt  FindEigen.cmake  FindLocalEigen.cmake  FindLocalPyBind11.cmake  clang_format.sh  constants.cmake  finalize.cmake  intrin.sh  load_externals.cmake
_cmake/targets/: _onnx2.cmake  _validation.cmake  _validation_cuda_example_py.cmake  _validation_cuda_monitor.cmake  c_op_conv_.cmake  c_op_svm_py_.cmake  c_op_tfidf_vectorizer_py_.cmake  c_op_tree_ensemble_py_.cmake  common.cmake  common_kernels.cmake  cuda_example_py.cmake  direct_blas_lapack_cy.cmake  fp8_cy.cmake  ortinf.cmake  ortops_optim_cpu.cmake  ortops_optim_cuda.cmake  ortops_tutorial.cmake  ortops_tutorial_cpu.cmake  ortops_tutorial_cuda.cmake  vector_function_cy.cmake
_doc/: benchmarks.rst  command_lines.rst  conf.py  index.rst  license.rst
_doc/api/: check.rst  command_lines.rst  ext_test_case.rst  helper.rst  index.rst  memory_peak.rst  onnx2.rst  ortcy.rst  ortops.rst  ortops_optim.rst  ortops_optim_cpu.rst  ortops_optim_cuda.rst  ortops_tutorial.rst  ortops_tutorial_cpu.rst  ortops_tutorial_cuda.rst  plotting.rst  reference.rst  tools.rst  tools_einsum.rst  tools_graph.rst  tools_graph_transformer.rst  tools_inline.rst  tools_io.rst  tools_manipulations.rst  tools_nodes.rst  tools_other.rst  tools_simple.rst  tools_stats.rst  tools_transformer.rst  validation.rst  validation_cpu.rst  validation_cuda.rst  validation_sparse.rst  validation_trees.rst
_doc/examples/: README.txt  plot_bench_cpu.py  plot_bench_cpu_vector_sum.py  plot_bench_cpu_vector_sum_avx_parallel.py  plot_bench_cpu_vector_sum_parallel.py  plot_bench_cypy_ort.py  plot_bench_gemm.py  plot_bench_gemm_f8.py  plot_bench_gemm_ort.py  plot_bench_gpu_vector_sum_gpu.py  plot_bench_ort.py  plot_bench_sparse_access.py  plot_check_random_order.py  plot_conv.py  plot_conv_denorm.py  plot_conv_weird.py  plot_onnx2_time.py  plot_op_conv_denorm.py  plot_op_conv_py_vs_c.py  plot_op_einsum.py  plot_op_gemm2_cuda.py  plot_op_mul_cuda.py  plot_op_scatternd_cuda.py  plot_op_scatternd_mask_cuda.py  plot_op_tfidfvectorizer_sparse.py  plot_op_transpose_2d_cast_cuda.py  plot_op_tree_ensemble_implementations.py  plot_op_tree_ensemble_optim.py  plot_op_tree_ensemble_sparse.py  plot_optim_tfidf.py  plot_optim_tree_ensemble.py  plot_profile_gemm_ort.py
_doc/tech/: 2023-09-05-glibc.rst  gemm.rst  index.rst  install_cuda_wsl.rst
_doc/tutorial/: build.rst  build_cuda.rst  build_cython.rst  build_ortext.rst  build_pybind11.rst  custom_ops.rst  cython_binding.rst  examples.rst  external_data.rst  index.rst  install_cuda_wsl.rst  many_tools.rst  old_version.rst  onnx_manipulations.rst  ops.rst  ort_debug.rst  parallelization.rst  profiling.rst  quantize.rst  readings.rst  reference_evaluator.rst  statistics.rst  tools.rst  trees.rst  usefulcmd.rst
_unittests/: onnx_extended_test_common.h  test_common.h
_unittests/ut__main/: test_documentation_examples.py
_unittests/ut_helper/: test_large_onnx.py  test_make_helper.py
_unittests/ut_onnx2/: test_backend_onnx_vs_onnx2.py  test_onnx2.py  test_onnx2_cpu.cpp  test_onnx2_helper.cpp  test_onnx2_helper.py  test_onnx2_models.py  test_onnx2_protos.cpp  test_onnx2_threads.cpp  test_onnx_vs_onnx2.py
_unittests/ut_ortcy/: test_inference.cpp  test_ortcy.py  test_ortcy_classes.py  test_ortcy_value.py
_unittests/ut_ortops/: test_inference_tree.cpp  test_optim_cpu.py  test_optim_cuda.py  test_optim_py.py  test_optim_sparse.py  test_optim_svm.py  test_optim_tfidf_vectorizer.py  test_optim_tfidf_vectorizer_sparse.py  test_optim_tree_ensemble.py  test_optim_tree_ensemble_cpu.py  test_optim_tree_ensemble_sparse.py  test_optim_tree_ensemble_sparse_cpu.py  test_optim_tree_ensemble_sparse_xgboost.py  test_svm.py  test_tfidf_vectorizer.py  test_tfidf_vectorizer_sparse.py  test_tutorial.py  test_tutorial_cpu.py  test_tutorial_cpu_tree.py  test_tutorial_cuda.py  test_tutorial_gemm_cpu.py  test_tutorial_gemm_cuda.py  test_xgboost_sparse.py
_unittests/ut_plotting/: test_plotting_benchmark.py  test_plotting_histogram.py
_unittests/ut_reference/: test_backend_c_reference_evaluator.py  test_c_op_conv.cpp  test_c_reference_evaluator.py  test_c_reference_evaluator_save.py  test_c_svm.py  test_c_tfidf_vectorizer.py  test_c_tree_ensemble.py  test_sparse_tensor.py
_unittests/ut_tools/: test_einsum.py  test_einsum_benchmark.py  test_einsum_blas_lapack.py  test_einsum_bug.py  test_einsum_einsum.py  test_einsum_generic_dot.py  test_einsum_ml.py  test_einsum_onnx_micro_runtime.py  test_js_profile.py  test_onnx_inline.py  test_onnx_tools.py  test_onnx_tools_graph.py  test_onnx_tools_quantize_fp8.py  test_optim_onnx_unused.py  test_ort_debug.py  test_proto.py  test_run_onnx.py  test_simple.py  test_stats_nodes.py  test_test_onnx.py
_unittests/ut_validation/: test_bench_tree.py  test_cpu_fpemu.cpp  test_cpu_fpemu.py  test_cuda_fpemu.py  test_cuda_gemm.py  test_cuda_monitor.py  test_fp8.py  test_hash.py  test_onnx2.py  test_sparse_struct.py  test_sparse_tensor.py  test_speed_metrics.py  test_vector_cuda.py  test_vector_sum.cpp  test_vector_sum.py
_unittests/ut_xrun_doc/: test_args.py  test_command_lines.py  test_command_lines1.py  test_command_lines2.py  test_documentation_examples.py  test_memory_peak.py  test_version.py
cmake/: CMakeLists.txt  FindCudaExtension.cmake  FindCython.cmake  FindLocalPyBind11.cmake  FindMyPython.cmake  FindOrt.cmake  clang_format.sh
dump_test/: test_model_gemm.onnx  test_model_gemm_onnx_to_onnx2_2.onnx
onnx_extended/: __init__.py  __main__.py  _command_lines.py  _command_lines_parser.py  _common.py  args.py  ext_test_case.py  memory_peak.py
(+290 files in other folders)
